[package]
name = "bevy_ggrs_rapier_example"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
# Would you believe me if I told you that you will get desyncs without these optimizations?
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[features]
default = []
web = ["bevy_ggrs/wasm-bindgen"]

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.16.6"
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier2d"] }
bevy_framepace = "0.11.0"
bevy_ggrs = "0.11.0"
# bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs/", branch = "main" }
#bevy_rapier2d = { version = "0.19.0", features = [
#bevy_rapier2d = { path = "../bevy_rapier/bevy_rapier2d", features = [
# This branch must be used until dimforge/bevy_rapier PRs #233 is merged
bevy_rapier2d = { git = "https://github.com/cscorley/bevy_rapier", branch = "more-deterministic-context", features = [
    "enhanced-determinism",
    "serde-serialize",
] }
bincode = "1.3.3"
bytemuck = { version = "1.12.3", features = ["derive"] }
log = "0.4"
matchbox_socket = { version = "0.5.0", features = ["ggrs-socket"] }
rand = "0.8.5"
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tracing-log = "0.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggrs = { version = "0.9.3", features = ["sync-send"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ggrs = { version = "0.9.3", features = ["sync-send", "wasm-bindgen"] }

[patch.crates-io]
# ggrs = { git = "https://github.com/gschup/ggrs" }
bevy_rapier2d = { git = "https://github.com/cscorley/bevy_rapier", branch = "more-deterministic-context" }
