[package]
name = "bevy_ggrs_rapier_example"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[features]
default = []
web = ["bevy_ggrs/wasm-bindgen", "ggrs/wasm-bindgen"]

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
bevy_framepace = "0.13.3"
bevy_ggrs = "0.13.0"
bevy_matchbox = { version = "0.7.0", features = ["ggrs"] }
bincode = "1.3.3"
bytemuck = { version = "1.12.3", features = ["derive"] }
ggrs = { version = "0.9.4", features = ["sync-send"] }
log = "0.4"
rand = "0.8.5"
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tracing-log = "0.1.3"

# This branch must be used until dimforge/bevy_rapier PRs #233 is merged
# bevy_rapier2d = { version = "0.22.0", features = [
# bevy_rapier2d = { path = "../bevy_rapier/bevy_rapier2d", features = [
bevy_rapier2d = { git = "https://github.com/cscorley/bevy_rapier", branch = "more-deterministic-context-0.11", features = [
    "enhanced-determinism",
    "serde-serialize",
] }

# Overriding glam for # https://github.com/cscorley/bevy_ggrs_rapier_example/issues/22
# We have this here so we can explicitly declare the libm feature to ensure it's
# enabled.  We still want to have this direct dependency, even though we don't
# use glam ourselves, because we want to force on the libm feature.
# Unfortunately, we cannot enable the feature via bevy yet, which would be
# optimal.
glam = { version = "0.24.1", features = ["libm"] }

# Add our web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
