[package]
name = "bevy_ggrs_rapier_example"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[features]
default = []
web = ["bevy_ggrs/wasm-bindgen", "ggrs/wasm-bindgen"]

[dependencies]
# Prefer listing the exact bevy and bevy-adjacent versions here for clarity of what worked
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main", features = [
  "enhanced-determinism",
] }
# avian2d = { git = "https://github.com/Jondolf/avian", branch = "main", default-features = false, features = [ "2d", "f32", "parry-f32", "debug-plugin", "enhanced-determinism", ] } 
# avian2d = { version = "0.1.2", features = ["debug-plugin", "enhanced-determinism"] } # TODO: serialize perhaps?
bevy = "0.14.1"
# Enable libm in glam dependency for https://github.com/cscorley/bevy_ggrs_rapier_example/issues/22
# Looks like avian does this for us already, nice!
# bevy_math = { version = "0.14.1", features = ["libm"] }
bevy-inspector-egui = "0.25.2"
bevy_framepace = "0.17.1"
bevy_ggrs = "0.16.0"
bevy_matchbox = { version = "0.10.0", features = ["ggrs"] }
bytemuck = { version = "1.17.1", features = ["derive"] }
ggrs = { version = "0.10.2", features = ["sync-send"] }
log = "0.4"
rand = "0.8.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"

# Add our web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
